--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^1.7.0"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
